# Discord-Receipts

./: README.md  pyproject.toml  requirements.txt
src/: discord_listener.py  receipt_printer.py
